force-app/main/default/objects/Solicitud_de_Pintura_Rotulaci_n__c/Solicitud_de_Pintura_Rotulaci_n__c.object-meta.xml
<CustomObject>
    <description>Gestionar las solicitudes de pintura rotulación para la fachada de nuevos clientes</description>
    <label>Solicitud de Pintura Rotulación</label>
    <nameField>
        <label>Nombre de Solicitud de Pintura Rotulación</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Solicitudes de Pinturas Rotulaciones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>