force-app/main/default/objects/Solicitud_de_Pintura_Rotulaci_n__c/fields/Compra_Trimestral__c.field-meta.xml
<CustomField>
    <fullName>Compra_Trimestral__c</fullName>
    <label>Compra Trimestral</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>