force-app/main/default/objects/Solicitud_de_Pintura_Rotulaci_n__c/fields/Costo_Total__c.field-meta.xml
<CustomField>
    <fullName>Costo_Total__c</fullName>
    <label>Costo Total</label>
    <summarizedField>Productos__c.Costo_Total__c</summarizedField>
    <summaryForeignKey>Productos__c.Solicitud_de_Pintura_Rotulaci_n__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>