force-app/main/default/objects/Solicitud_de_Pintura_Rotulaci_n__c/fields/Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Cuenta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cuenta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Solicitudes de Pinturas Rotulaciones</relationshipLabel>
    <relationshipName>Solicitudes_de_Pinturas_Rotulaciones</relationshipName>
    <type>Lookup</type>
</CustomField>