force-app/main/default/objects/Solicitud_de_Pintura_Rotulaci_n__c/fields/Datos_de_Entrega__c.field-meta.xml
<CustomField>
    <fullName>Datos_de_Entrega__c</fullName>
    <label>Datos de Entrega</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>