force-app/main/default/objects/Solicitud_de_Pintura_Rotulaci_n__c/fields/Estatus__c.field-meta.xml
<CustomField>
    <fullName>Estatus__c</fullName>
    <label>Estatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nuevo</fullName>
                <default>true</default>
                <label>Nuevo</label>
            </value>
            <value>
                <fullName>Pendiente de Autorización</fullName>
            </value>
            <value>
                <fullName>Autorizado</fullName>
            </value>
            <value>
                <fullName>Rechazado</fullName>
            </value>
            <value>
                <fullName>Preparación de Material</fullName>
            </value>
            <value>
                <fullName>Entrega en Almacén Planta</fullName>
            </value>
            <value>
                <fullName>Pintura No Entregada</fullName>
            </value>
            <value>
                <fullName>Pintura Entregada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>