force-app/main/default/objects/Solicitud_de_Pintura_Rotulaci_n__c/fields/Fecha_de_entrega_en_almacen__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_entrega_en_almacen__c</fullName>
    <label>Fecha de entrega en almacen</label>
    <type>Date</type>
</CustomField>