force-app/main/default/objects/Solicitud_de_Pintura_Rotulaci_n__c/fields/N_m__c.field-meta.xml
<CustomField>
    <fullName>N_m__c</fullName>
    <displayFormat>PR-{00000}</displayFormat>
    <label>Núm. Solicitud</label>
    <type>AutoNumber</type>
</CustomField>