force-app/main/default/objects/Solicitud_de_Pintura_Rotulaci_n__c/fields/N_m_Cliente__c.field-meta.xml
<CustomField>
    <fullName>N_m_Cliente__c</fullName>
    <formula>Cuenta__r.id_de_sap__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Núm. Cliente</label>
    <type>Text</type>
</CustomField>