force-app/main/default/objects/Solicitud_de_Pintura_Rotulaci_n__c/fields/Nombre_Comercial__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Comercial__c</fullName>
    <label>Nombre Comercial</label>
    <length>30</length>
    <type>Text</type>
</CustomField>