force-app/main/default/objects/Solicitud_de_Pintura_Rotulaci_n__c/fields/Tipo_de_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Cliente__c</fullName>
    <formula>IF(TEXT(Cuenta__r.grupo__c) = &quot;01&quot;,&quot;Distribuidor A&quot;, IF( TEXT(Cuenta__r.grupo__c) = &quot;02&quot;,&quot;Distribuidor B&quot;, IF( TEXT(Cuenta__r.grupo__c) = &quot;03&quot;,&quot;Distribuidor C&quot;,IF( TEXT(Cuenta__r.grupo__c) = &quot;04&quot;,&quot;Distribuidor D&quot;,IF( TEXT(Cuenta__r.grupo__c) = &quot;08&quot;,&quot;Multimarcas A&quot;,IF( TEXT(Cuenta__r.grupo__c) = &quot;09&quot;,&quot;Multimarcas B&quot;,IF( TEXT(Cuenta__r.grupo__c) = &quot;10&quot;,&quot;Multimarcas C&quot;,TEXT(Cuenta__r.grupo__c))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo de Cliente</label>
    <type>Text</type>
</CustomField>