force-app/main/default/objects/Solicitud_de_Pintura_Rotulaci_n__c/fields/Tipo_de_Solicitud__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Solicitud__c</fullName>
    <label>Tipo de Solicitud</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nuevo Distribuidor</fullName>
            </value>
            <value>
                <fullName>Nuevo Punto de Venta</fullName>
            </value>
            <value>
                <fullName>Renovación</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>