force-app/main/default/objects/Solicitud_de_Pintura_Rotulaci_n__c/fields/Vale__c.field-meta.xml
<CustomField>
    <fullName>Vale__c</fullName>
    <label>Vale</label>
    <length>10</length>
    <type>Text</type>
</CustomField>